use position:sticky for  navbar instead of fixed remove extra margins & padding

--- a/portal/static/css/gravis.css
+++ b/portal/static/css/gravis.css
@@ -91,7 +91,7 @@ h2 {
 .grid {
     display:grid; 
     overflow-x: hidden; 
-    height:calc(100vh - 6rem); 
+    height:calc(100vh - 5.5rem); 
     grid-template-rows: 0fr 1fr 0.9fr; 
     grid-template-columns: 1.0fr 2.0fr 0.5fr; 
     gap: 0.5em; 
